--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"npx ts-node\" src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "db": "ts-node src/seeders/index.ts",
-    "db:seed": "ts-node src/seeders/seed.ts",
-    "db:clean": "ts-node src/seeders/clean.ts",
-    "db:refresh": "ts-node src/seeders/refresh.ts"
+    "db": "ts-node src/seeders/index.ts"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.15.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.2",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
